tests/bad/size.nx
// a função size é de tipo array -> int
print( size(2) )